coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__pending_chord.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCODE v0.1.0                                                         
 │●│ │●│  opus-4  *  auto                                                       
 ╰─╯ ╰─╯                                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto * ctrl+t to cycle | ctrl+x … | ↑0 ↓0 · cache 0/0% | ctx -- | →0 ←
 ⏯ ask mode on · shift+tab to cycle
