coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__permission_prompt.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCODE v0.1.1                                                         
 │●│ │●│  opus-4  *  auto                                                       
 ╰─╯ ╰─╯                                                                        
                                                                                
┌ Bash [HIGH] — PgUp/PgDn ⇅────────────────────────────────────────────────────┐
│Execute shell command                                                         │
│                                                                              │
│Actions:                                                                      │
│▸ 1/y · Yes, approve once ◂                                                   │
│  2/n · No, deny                                                              │
│↑/↓ Navigate  Enter Select  1-2 or Y/N shortcuts                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto * ctrl+t to cycle | ↑0 ↓0 · cache 0/0% | ctx -- | →0 ←0
