coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__rate_limit_banner.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCODE v0.1.1                                                         
 │●│ │●│  opus-4  *  auto                                                       
 ╰─╯ ╰─╯                                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto * ctrl+t to cycle | ctx -- | →0 ←0                               
 ⏯ manual mode on · shift+tab to cycle
