coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__reverse_search_footer_match.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCO v0.1.0                                                           
 │●│ │●│  no model selected                                                     
 ╰─╯ ╰─╯                                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯ git status                                                                    
reverse-i-search: git  enter accept · esc cancel────────────────────────────────
 auto * ctrl+t to cycle | ↑0 ↓0 · cache 0/0% | ctx -- | →0 ←0                   
 ⏯ ask mode on · shift+tab to cycle
