coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__reverse_search_footer_no_match.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCODE v0.1.1                                                         
 │●│ │●│  no model selected                                                     
 ╰─╯ ╰─╯                                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯ draft text                                                                    
reverse-i-search: zzz  no match─────────────────────────────────────────────────
 auto * ctrl+t to cycle | ↑0 ↓0 · cache 0/0% | ctx -- | →0 ←0                   
 ⏯ ask mode on · shift+tab to cycle
