coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__side_chat_idle.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCODE v0.1.1  ·  Side chat                                                               
 │●│ │●│  deepseek-openai/deepseek-v4-flash  *  auto                                                
 ╰─╯ ╰─╯                                                                                            
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
 deepseek-openai/deepseek-v4-flash * auto | ctx -- | →0 ←0              Side chat · Ctrl+C to return
 ⏯ manual mode on
