coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__streaming.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCODE v0.1.0                                                         
 │●│ │●│  opus-4  *  auto                                                       
 ╰─╯ ╰─╯                                                                        
                                                                                
❯ Explain Rust                                                                  
                                                                                
⏺ Rust is a systems programming language                                        
▌                                                                               
────────────────────────────────────────────────────────────────────────────────
~                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto * ctrl+t to cycle | ↑0 ↓0 · cache 0/0% | ctx -- | →1 ←0          
 ⏯ ask mode on · shift+tab to cycle
