coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__subagent_panel_live_cost.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCODE v0.1.1                                                                             
 │●│ │●│  opus-4  *  auto                                                                           
 ╰─╯ ╰─╯                                                                                            
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
  Subagents (1/3) · 80 tools · ↑150.1k ↓1.1k · cache 86% · $0.31                                    
  ● Explore: Map app/root crates  33 tools · 1m 28s · ↑68.1k ↓468 · cache 93% · $0.12               
  ● Plan: Design refactor  10 tools · 1m 20s · ↑12.0k ↓100 · $0.01                                  
  Shift+↑ switch agent                                                                              
────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto * ctrl+t to cycle | ↑0 ↓0 · cache 0/0% | ctx -- | →0 ←0                              
 ⏯ ask mode on · shift+tab to cycle
