coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__subagent_panel_populated.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCODE v0.1.1                                                                             
 │●│ │●│  opus-4  *  auto                                                                           
 ╰─╯ ╰─╯                                                                                            
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
  Subagents (0/2)                                                                                   
▸ ● Explore: Search for auth handlers                                                               
  ● Plan: Design refactor plan                                                                      
  Shift+↑ switch agent                                                                              
────────────────────────────────────────────────────────────────────────────────────────────────────
❯                                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto * ctrl+t to cycle | ↑0 ↓0 · cache 0/0% | ctx -- | →0 ←0                              
 ⏯ ask mode on · shift+tab to cycle
